in goa-chat-client, yarn run eject
